# cracks

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  cracks.cc  parameters_hetero_3d.prm  parameters_hetero_multiple_cracks.prm  parameters_homo_multiple_cracks.prm  parameters_miehe_shear_adaptive.prm  parameters_miehe_tension_adaptive.prm  parameters_sneddon_2d.prm  parameters_sneddon_3d.prm  parameters_threepoint.prm  sneddon2d.prm  sneddon3d.prm  step-fsi.cc  test.pgm
contrib/: indent  install-astyle  open.sh  test.sh
meshes/: threepoint.msh  unit_cube_10.inp  unit_slit.inp  unit_square_4.inp
sneddon_spp/: global3.prm  global4.prm  global5.prm  global6.prm  global7.prm  global8.prm  plot.gnuplot  sneddon_mixedrefine.prm  sneddon_snedrefine.prm
sneddon_spp/results_adaptive/: cod-01b.txt  cod-02b.txt  cod-03b.txt  cod-04b.txt  cod-05b.txt  cod-06b.txt  cod-07b.txt  cod-08b.txt  cod-09b.txt  cod-10b.txt  cod-11b.txt  (+3 more)
tests/: CMakeLists.txt  default.pl  hetero_3d_1.mpirun-4.output  hetero_3d_1.mpirun-4.statistics  hetero_3d_1.prm  miehe_shear_1.output  miehe_shear_1.prm  miehe_shear_1.statistics  miehe_shear_2.mpirun=2.output  miehe_shear_2.mpirun=2.statistics  miehe_shear_2.output  miehe_shear_2.prm  miehe_shear_2.statistics  miehe_tension_adaptive_1.output  miehe_tension_adaptive_1.prm  miehe_tension_adaptive_1.statistics  run_test.sh  sneddon_2d_1.output  sneddon_2d_1.prm  sneddon_2d_1.statistics  sneddon_3d_1.mpirun=4.output  sneddon_3d_1.mpirun=4.statistics  sneddon_3d_1.prm  threepoint_1.mpirun=2.output  threepoint_1.mpirun=2.statistics  threepoint_1.prm
